--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     This is my HTML project.
+    <h1>
+        hello world
+    </h1>
+    <p>This is my first paragraph.</p>
+    <p>This is my second paragraph.</p>
 </body>
 </html>
